--- a/dizains.css
+++ b/dizains.css
@@ -92,6 +92,12 @@
   margin-right: 5px;
 }
 
+.responsive { /*ekrāna ietekme uz attēlu*/
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
 body {
     display: flex;
     flex-direction: column;
