--- a/dizains.css
+++ b/dizains.css
@@ -98,6 +98,16 @@
   height: auto;
 }
 
+.btn {
+  background-color: rgb(0, 0, 0); /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+
 body {
     display: flex;
     flex-direction: column;
