--- a/dizains.css
+++ b/dizains.css
@@ -141,19 +141,16 @@ body {
     display: inline-block;
   }  
   .slider{
-    width: 800px;
-    height: 500px;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
     border-radius: 10px;
     overflow: hidden;
   }
+
   .slides{
     width: 500%;
-    height: 500px;
-    display: flex;
-  }
-  .slides{
-    width: 500%;
-    height: 500px;
+    height: auto;
     display: flex;
   }
   
@@ -164,23 +161,27 @@ body {
   .slide{
     width: 20%;
     transition: 2s;
-  }.slide img{
-    width: 800px;
-    height: 500px;
+  }
+  .slide img{
+    width: 100%;
+    max-width: 800px;
+    max-height: 700px;
+    height: auto;
   }
   
   /*css manuālā pārvietošanās*/
   
   .navigation-manual{
     position: absolute;
-    width: 800px;
-    margin-top: -40px;
+    width: 100%;
+    max-width: 800px;
+    margin-top: -30px;
     display: flex;
     justify-content: center;
   }
   
   .manual-btn{
-    border: 2px solid #005551;
+    border: 2px solid #1d057a;
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
@@ -204,14 +205,15 @@ body {
   }
   
   
-  /*auto pārvietošanās*/
+  /*auto pārvietošanās
   
   .navigation-auto{
     position: absolute;
     display: flex;
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
     justify-content: center;
-    margin-top: 460px;
+    margin-top: -100px ;
   }
   
   .navigation-auto div{
@@ -231,4 +233,4 @@ body {
   
   #radio2:checked ~ .navigation-auto .auto-btn2{
     background: #005551;
-  }
+  }*/
